--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "ranvier-telnet",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Telnet server and socket with GMCP support",
   "main": "index.js",
-  "engines" : { "node" : ">=7" },
+  "engines": {
+    "node": ">=7"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/shawncplus/ranvier-telnet.git"
